--- a/src/css/main.prefix.css
+++ b/src/css/main.prefix.css
@@ -34,21 +34,13 @@
   -webkit-transform: translateY(-60px);
   -ms-transform: translateY(-60px);
   transform: translateY(-60px);
-  margin-bottom: -60px;
-}
-
-/* line 40, ../scss/_translucent.scss */
-
-.content:before {
-  display: block;
-  content: '';
-  height: 60px;
+  padding-top: 60px;
 }
 
 /* line 14, ../scss/main.scss */
 
 .messages {
-  margin: 0;
+  margin: 10px 0;
   padding: 0;
   list-style-type: none;
 }
