Fix iOS7 scrolling

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -4,14 +4,10 @@
   /* Not covered by autoprefixer... */
   -webkit-flow-into: content;
   flow-into: content;
-  overflow: hidden;
   overflow-y: auto;
-  -webkit-overflow-scrolling: touch;
-  /* Not covered by autoprefixer... */
-  overflow-scrolling: touch;
 }
 
-/* line 21, ../scss/_translucent.scss */
+/* line 17, ../scss/_translucent.scss */
 .header__background,
 .phone__content {
   transform: translateZ(0);
@@ -19,6 +15,11 @@
   /* Not covered by autoprefixer... */
   -webkit-flow-from: content;
   flow-from: content;
+}
+
+/* line 28, ../scss/_translucent.scss */
+.phone__content {
+  -webkit-overflow-scrolling: touch;
 }
 
 /* line 7, ../scss/main.scss */
