--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,10 +1,4 @@
 @import url(http://weloveiconfonts.com/api/?family=entypo);
-/* entypo */
-/* line 4, ../scss/main.scss */
-[class*="entypo-"]:before {
-  font-family: 'entypo', sans-serif;
-}
-
 /* line 1, ../scss/_translucent.scss */
 .content {
   box-sizing: border-box;
@@ -23,21 +17,20 @@
   flow-from: content;
 }
 
-/* line 16, ../scss/main.scss */
-.content {
-  padding: 1em 1em 0 1em;
-  height: 672px;
-  padding-top: 60px;
+/* entypo */
+/* line 4, ../scss/_common.scss */
+[class*="entypo-"]:before {
+  font-family: 'entypo', sans-serif;
 }
 
-/* line 23, ../scss/main.scss */
+/* line 8, ../scss/_common.scss */
 .messages {
   margin: 10px 0;
   padding: 0;
   list-style-type: none;
 }
 
-/* line 29, ../scss/main.scss */
+/* line 14, ../scss/_common.scss */
 .messages li {
   display: block;
   float: left;
@@ -47,17 +40,17 @@
   padding: 0;
 }
 
-/* line 38, ../scss/main.scss */
+/* line 23, ../scss/_common.scss */
 .messages li:nth-child(even) {
   float: right;
 }
 
-/* line 42, ../scss/main.scss */
+/* line 27, ../scss/_common.scss */
 .messages li:nth-child(even) img {
   float: right;
 }
 
-/* line 46, ../scss/main.scss */
+/* line 31, ../scss/_common.scss */
 .messages p {
   border-radius: .75em;
   background: #e6e5eb;
@@ -67,20 +60,44 @@
   font-size: .875em;
 }
 
-/* line 55, ../scss/main.scss */
+/* line 40, ../scss/_common.scss */
 .messages li:nth-child(even) p {
   background: #158ffe;
   color: #fff;
 }
 
-/* line 60, ../scss/main.scss */
+/* line 45, ../scss/_common.scss */
 .messages img {
   display: block;
   max-width: 65%;
   border-radius: .75rem;
 }
 
-/* line 67, ../scss/main.scss */
+/* line 52, ../scss/_common.scss */
+body {
+  font-family: "Helvetica Neue","Helvetica","sans-serif";
+}
+
+/* line 56, ../scss/_common.scss */
+.custom {
+  position: absolute;
+  top: 10px;
+}
+/* line 60, ../scss/_common.scss */
+.custom style {
+  display: block;
+  white-space: pre;
+}
+
+/* line 9, ../scss/main.scss */
+.content {
+  padding: 1em 1em 0 1em;
+  height: calc(567px + 60px + 45px);
+  padding-top: 60px;
+  padding-bottom: calc(60px + 60px + 45px);
+}
+
+/* line 17, ../scss/main.scss */
 .phone {
   position: relative;
   width: 509px;
@@ -89,7 +106,7 @@
   background: url(/img/phone.png);
 }
 
-/* line 75, ../scss/main.scss */
+/* line 25, ../scss/main.scss */
 .phone__display {
   position: absolute;
   top: 182px;
@@ -98,13 +115,13 @@
   width: 319px;
 }
 
-/* line 83, ../scss/main.scss */
+/* line 33, ../scss/main.scss */
 .blurred {
   position: relative;
   height: 60px;
 }
 
-/* line 88, ../scss/main.scss */
+/* line 38, ../scss/main.scss */
 .blurred__background, .header__text, .footer__container {
   position: absolute;
   top: 0;
@@ -113,31 +130,31 @@
   height: inherit;
 }
 
-/* line 94, ../scss/main.scss */
+/* line 44, ../scss/main.scss */
 .blurred__background {
   filter: blur(10px);
   opacity: .2;
 }
 
-/* line 103, ../scss/main.scss */
+/* line 53, ../scss/main.scss */
 .header:before, .header:after {
   position: absolute;
   content: '';
   width: 100%;
   z-index: 1;
 }
-/* line 110, ../scss/main.scss */
+/* line 60, ../scss/main.scss */
 .header:before {
   height: 100%;
 }
-/* line 114, ../scss/main.scss */
+/* line 64, ../scss/main.scss */
 .header:after {
   height: 1px;
   bottom: 0;
   box-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
 }
 
-/* line 121, ../scss/main.scss */
+/* line 71, ../scss/main.scss */
 .header__text {
   font-weight: 300;
   text-align: center;
@@ -145,63 +162,63 @@
   z-index: 4;
 }
 
-/* line 131, ../scss/main.scss */
+/* line 81, ../scss/main.scss */
 .footer {
   position: relative;
   height: 45px;
 }
-/* line 136, ../scss/main.scss */
+/* line 86, ../scss/main.scss */
 .footer:before, .footer:after {
   position: absolute;
   content: '';
   width: 100%;
   z-index: 1;
 }
-/* line 143, ../scss/main.scss */
+/* line 93, ../scss/main.scss */
 .footer:before {
   height: 100%;
 }
-/* line 147, ../scss/main.scss */
+/* line 97, ../scss/main.scss */
 .footer:after {
   height: 1px;
   top: 0;
   box-shadow: 0 -1px 0 rgba(0, 0, 0, 0.1);
 }
 
-/* line 154, ../scss/main.scss */
+/* line 104, ../scss/main.scss */
 .footer__container {
   list-style: none;
   margin: 0 1.2em;
   padding: 0;
   letter-spacing: 1.5em;
 }
-/* line 160, ../scss/main.scss */
+/* line 110, ../scss/main.scss */
 .footer__container > li {
   display: inline-block;
   line-height: 45px;
   font-size: 1.5em;
 }
-/* line 165, ../scss/main.scss */
+/* line 115, ../scss/main.scss */
 .footer__container .spacer {
   width: .22em;
 }
 
-/* line 170, ../scss/main.scss */
+/* line 120, ../scss/main.scss */
 .phone__content {
   height: 462px;
 }
 
-/* line 177, ../scss/main.scss */
+/* line 127, ../scss/main.scss */
 body {
   font-family: "Helvetica Neue","Helvetica","sans-serif";
 }
 
-/* line 181, ../scss/main.scss */
+/* line 131, ../scss/main.scss */
 .custom {
   position: absolute;
   top: 10px;
 }
-/* line 185, ../scss/main.scss */
+/* line 135, ../scss/main.scss */
 .custom style {
   display: block;
   white-space: pre;
