--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -1,9 +1,6 @@
 @import url(http://weloveiconfonts.com/api/?family=entypo);
-
 /* line 1, ../scss/_translucent.scss */
-
 .content {
-  -moz-box-sizing: border-box;
   box-sizing: border-box;
   /* Not covered by autoprefixer... */
   -webkit-flow-into: content;
@@ -12,11 +9,7 @@
 }
 
 /* line 16, ../scss/_translucent.scss */
-
-.blurred__background,
-.phone__content {
-  -webkit-transform: translateZ(0);
-  -ms-transform: translateZ(0);
+.blurred__background, .phone__content {
   transform: translateZ(0);
   overflow: hidden;
   /* Not covered by autoprefixer... */
@@ -25,15 +18,12 @@
 }
 
 /* entypo */
-
 /* line 4, ../scss/_common.scss */
-
 [class*="entypo-"]:before {
   font-family: 'entypo', sans-serif;
 }
 
 /* line 8, ../scss/_common.scss */
-
 .messages {
   margin: 10px 0;
   padding: 0;
@@ -41,7 +31,6 @@
 }
 
 /* line 14, ../scss/_common.scss */
-
 .messages li {
   display: block;
   float: left;
@@ -52,19 +41,16 @@
 }
 
 /* line 23, ../scss/_common.scss */
-
 .messages li:nth-child(even) {
   float: right;
 }
 
 /* line 27, ../scss/_common.scss */
-
 .messages li:nth-child(even) img {
   float: right;
 }
 
 /* line 31, ../scss/_common.scss */
-
 .messages p {
   border-radius: .75em;
   background: #e6e5eb;
@@ -75,14 +61,12 @@
 }
 
 /* line 40, ../scss/_common.scss */
-
 .messages li:nth-child(even) p {
   background: #158ffe;
   color: #fff;
 }
 
 /* line 45, ../scss/_common.scss */
-
 .messages img {
   display: block;
   max-width: 65%;
@@ -90,68 +74,47 @@
 }
 
 /* line 52, ../scss/_common.scss */
-
 body {
   font-family: "Helvetica Neue","Helvetica","sans-serif";
 }
 
 /* line 56, ../scss/_common.scss */
-
 .custom {
   position: absolute;
   top: 10px;
 }
-
 /* line 60, ../scss/_common.scss */
-
 .custom style {
   display: block;
   white-space: pre;
 }
 
-/* line 9, ../scss/main.scss */
+/* line 8, ../scss/mobile.scss */
+html,
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+}
 
+/* line 16, ../scss/mobile.scss */
 .content {
   padding: 1em 1em 0 1em;
-  height: -webkit-calc(567px + 60px + 45px);
-  height: calc(567px + 60px + 45px);
+  height: 100vh;
   padding-top: 60px;
-  padding-bottom: -webkit-calc(60px + 60px + 45px);
-  padding-bottom: calc(60px + 60px + 45px);
+  padding-bottom: 60px;
 }
 
-/* line 17, ../scss/main.scss */
-
-.phone {
-  position: relative;
-  width: 509px;
-  height: 931px;
-  margin: 0 auto;
-  background: url(/img/phone.png);
-}
-
-/* line 25, ../scss/main.scss */
-
-.phone__display {
-  position: absolute;
-  top: 182px;
-  left: 95px;
-  height: 567px;
-  width: 319px;
-}
-
-/* line 33, ../scss/main.scss */
-
+/* line 24, ../scss/mobile.scss */
 .blurred {
   position: relative;
   height: 60px;
 }
 
-/* line 38, ../scss/main.scss */
-
-.blurred__background,
-.header__text,
-.footer__container {
+/* line 29, ../scss/mobile.scss */
+.blurred__background, .header__text, .footer__container {
   position: absolute;
   top: 0;
   left: 0;
@@ -159,40 +122,31 @@ body {
   height: inherit;
 }
 
-/* line 44, ../scss/main.scss */
-
+/* line 35, ../scss/mobile.scss */
 .blurred__background {
-  -webkit-filter: blur(10px);
   filter: blur(10px);
   opacity: .2;
 }
 
-/* line 53, ../scss/main.scss */
-
-.header:before,
-.header:after {
+/* line 44, ../scss/mobile.scss */
+.header:before, .header:after {
   position: absolute;
   content: '';
   width: 100%;
   z-index: 1;
 }
-
-/* line 60, ../scss/main.scss */
-
+/* line 51, ../scss/mobile.scss */
 .header:before {
   height: 100%;
 }
-
-/* line 64, ../scss/main.scss */
-
+/* line 55, ../scss/mobile.scss */
 .header:after {
   height: 1px;
   bottom: 0;
   box-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
 }
 
-/* line 71, ../scss/main.scss */
-
+/* line 62, ../scss/mobile.scss */
 .header__text {
   font-weight: 300;
   text-align: center;
@@ -200,82 +154,52 @@ body {
   z-index: 4;
 }
 
-/* line 81, ../scss/main.scss */
-
+/* line 72, ../scss/mobile.scss */
 .footer {
-  position: relative;
   height: 45px;
 }
-
-/* line 86, ../scss/main.scss */
-
-.footer:before,
-.footer:after {
+/* line 76, ../scss/mobile.scss */
+.footer:before, .footer:after {
   position: absolute;
   content: '';
   width: 100%;
   z-index: 1;
 }
-
-/* line 93, ../scss/main.scss */
-
+/* line 83, ../scss/mobile.scss */
 .footer:before {
   height: 100%;
 }
-
-/* line 97, ../scss/main.scss */
-
+/* line 87, ../scss/mobile.scss */
 .footer:after {
   height: 1px;
   top: 0;
   box-shadow: 0 -1px 0 rgba(0, 0, 0, 0.1);
 }
 
-/* line 104, ../scss/main.scss */
-
+/* line 94, ../scss/mobile.scss */
 .footer__container {
   list-style: none;
   margin: 0 1.2em;
   padding: 0;
   letter-spacing: 1.5em;
 }
-
-/* line 110, ../scss/main.scss */
-
+/* line 100, ../scss/mobile.scss */
 .footer__container > li {
   display: inline-block;
   line-height: 45px;
   font-size: 1.5em;
 }
-
-/* line 115, ../scss/main.scss */
-
+/* line 105, ../scss/mobile.scss */
 .footer__container .spacer {
   width: .22em;
 }
 
-/* line 120, ../scss/main.scss */
-
+/* line 110, ../scss/mobile.scss */
 .phone__content {
-  height: 462px;
+  height: calc(100% - 45px - 60px);
 }
 
-/* line 127, ../scss/main.scss */
-
-body {
-  font-family: "Helvetica Neue","Helvetica","sans-serif";
-}
-
-/* line 131, ../scss/main.scss */
-
-.custom {
-  position: absolute;
-  top: 10px;
-}
-
-/* line 135, ../scss/main.scss */
-
-.custom style {
-  display: block;
-  white-space: pre;
+/* line 115, ../scss/mobile.scss */
+.wrapper {
+  height: 100%;
 }
