--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,12 +1,5 @@
-@import url(http://weloveiconfonts.com/api/?family=entypo);
-
-/* entypo */
-[class*="entypo-"]:before {
-  font-family: 'entypo', sans-serif;
-}
-
-
 @import 'translucent';
+@import 'common';
 
 $header-height : 60px;
 $footer-height : 45px;
@@ -17,51 +10,8 @@ $content-height: 567px;
   @extend %content;
   padding:1em 1em 0 1em;
   // Apply the sizing to this content
-  @include setContentHeight($content-height + $header-height + $footer-height, $header-height);
+  @include setContentHeight($content-height, $header-height, $footer-height);
 }
-
-  .messages {
-    margin:10px 0;
-    padding:0;
-    list-style-type:none;
-  }
-
-  .messages li {
-    display:block;
-    float:left;
-    clear:both;
-    max-width:60%;
-    margin:0 0 1em 0;
-    padding:0;
-  }
-
-  .messages li:nth-child(even) {
-    float:right;
-  }
-
-  .messages li:nth-child(even) img {
-    float:right;
-  }
-
-  .messages p {
-    border-radius:.75em;
-    background:#e6e5eb;
-    color:#383641;
-    padding:.6875em;
-    margin:0;
-    font-size:.875em;
-  }
-
-  .messages li:nth-child(even) p {
-    background:#158ffe;
-    color:#fff;
-  }
-
-  .messages img {
-    display:block;
-    max-width:65%;
-    border-radius:.75rem;
-  }
 
 
 .phone{
