--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -101,19 +101,28 @@ body {
 
 /* line 16, ../scss/mobile.scss */
 .content {
-  padding: 1em 1em 0 1em;
+  overflow: hidden;
+  position: relative;
+  box-sizing: border-box;
+  width: 100vw;
   height: 100vh;
-  padding-top: 60px;
-  padding-bottom: 60px;
 }
 
-/* line 24, ../scss/mobile.scss */
+/* line 26, ../scss/mobile.scss */
+.scroller {
+  position: absolute;
+  box-sizing: border-box;
+  width: inherit;
+  padding: 60px 1em 45px 1em;
+}
+
+/* line 32, ../scss/mobile.scss */
 .blurred {
   position: relative;
   height: 60px;
 }
 
-/* line 30, ../scss/mobile.scss */
+/* line 38, ../scss/mobile.scss */
 .blurred__background, .header__text, .footer__container {
   position: absolute;
   top: 0;
@@ -122,31 +131,31 @@ body {
   height: inherit;
 }
 
-/* line 36, ../scss/mobile.scss */
+/* line 44, ../scss/mobile.scss */
 .blurred__background {
   filter: blur(10px);
   opacity: .2;
 }
 
-/* line 46, ../scss/mobile.scss */
+/* line 54, ../scss/mobile.scss */
 .header:before, .header:after {
   position: absolute;
   content: '';
   width: 100%;
   z-index: 1;
 }
-/* line 53, ../scss/mobile.scss */
+/* line 61, ../scss/mobile.scss */
 .header:before {
   height: 100%;
 }
-/* line 57, ../scss/mobile.scss */
+/* line 65, ../scss/mobile.scss */
 .header:after {
   height: 1px;
   bottom: 0;
   box-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
 }
 
-/* line 64, ../scss/mobile.scss */
+/* line 72, ../scss/mobile.scss */
 .header__text {
   font-weight: 300;
   text-align: center;
@@ -154,52 +163,52 @@ body {
   z-index: 4;
 }
 
-/* line 74, ../scss/mobile.scss */
+/* line 82, ../scss/mobile.scss */
 .footer {
   height: 45px;
 }
-/* line 78, ../scss/mobile.scss */
+/* line 86, ../scss/mobile.scss */
 .footer:before, .footer:after {
   position: absolute;
   content: '';
   width: 100%;
   z-index: 1;
 }
-/* line 85, ../scss/mobile.scss */
+/* line 93, ../scss/mobile.scss */
 .footer:before {
   height: 100%;
 }
-/* line 89, ../scss/mobile.scss */
+/* line 97, ../scss/mobile.scss */
 .footer:after {
   height: 1px;
   top: 0;
   box-shadow: 0 -1px 0 rgba(0, 0, 0, 0.1);
 }
 
-/* line 96, ../scss/mobile.scss */
+/* line 104, ../scss/mobile.scss */
 .footer__container {
   list-style: none;
   margin: 0 1.2em;
   padding: 0;
   letter-spacing: 1.5em;
 }
-/* line 102, ../scss/mobile.scss */
+/* line 110, ../scss/mobile.scss */
 .footer__container > li {
   display: inline-block;
   line-height: 45px;
   font-size: 1.5em;
 }
-/* line 107, ../scss/mobile.scss */
+/* line 115, ../scss/mobile.scss */
 .footer__container .spacer {
   width: .22em;
 }
 
-/* line 112, ../scss/mobile.scss */
+/* line 120, ../scss/mobile.scss */
 .phone__content {
   height: calc(100% - 45px - 60px);
 }
 
-/* line 117, ../scss/mobile.scss */
+/* line 125, ../scss/mobile.scss */
 .wrapper {
   height: 100%;
 }
